<resources>
    <string name="app_name">movieApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No se encontrarón resultados</string>
    <string name="generic_error">Error</string>
    <string name="database_error">Couldn\'t load values from database</string>
    <string name="connection_error">Please check your internet connection</string>
    <string name="server_error">A server error occurred, please try again later</string>
    <string name="movie_title">Title Movie</string>
    <string name="rate_title">Nota</string>
    <string name="release_date_title">Fecha de lanzamiento</string>
    <string name="sinopsis_title">Sinopsis</string>

    <string name="username_title">Username</string>
    <string name="username_hint">andyrios@gmail.com</string>
    <string name="password_title">Password</string>
    <string name="password_hint">**********</string>

    <string name="login_title">Iniciar Sesion</string>
    <string name="validate_username">Ingresar solo letras</string>
    <string name="login_error">Usuario y/o contraseña invalido</string>

</resources>