<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feature.login.MovieLoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/_24dp"
        android:paddingTop="@dimen/_24dp"
        android:paddingEnd="@dimen/_24dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/_200dp"
            android:src="@mipmap/ic_launcher"
            app:strokeWidth="@dimen/_0dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:padding="@dimen/_5dp"
            app:strokeColor="@color/secondary"
            android:layout_height="@dimen/_200dp">

        </com.google.android.material.imageview.ShapeableImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textColor="@color/secondary"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/username_title"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14dp"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:maxLength="15"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorUserName"
            android:layout_width="wrap_content"
            android:textColor="@color/red"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_24dp"
            android:textColor="@color/secondary"
            android:layout_width="wrap_content"
            android:text="@string/password_title"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPass"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_14dp"
            android:hint="@string/password_hint"
            android:maxLength="15"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            style="@style/Button.SemiRounded"
            android:text="@string/login_title"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>