<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feature.movieDetail.MovieDetailFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPoster"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/media_placeholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        style="@style/TextAppearance.MyTheme.TitleBig"
        app:layout_constraintTop_toBottomOf="@+id/ivPoster"
        tools:text="@string/movie_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="@dimen/_0dp"
        android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="@dimen/_0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSinopsisTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis_title"
            style="@style/TextAppearance.MyTheme.Title"
            tools:text="@string/sinopsis_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSinopsis"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_height="wrap_content"
            tools:text="@string/movie_title" />

        <View style="@style/Divider"
            android:layout_margin="@dimen/_14dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRateTitle"
            android:text="@string/rate_title"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.MyTheme.Title"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRate"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"
            android:layout_margin="@dimen/_14dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateTiTle"
            android:text="@string/release_date_title"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.MyTheme.Title"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>